Se alinean distintos elementos con flex

--- a/css/misRecetas.css
+++ b/css/misRecetas.css
@@ -16,11 +16,11 @@ main {
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
+    
 }
 
 .pasos {
-    width: 43%;
-    justify-content: flex-start;
+    width: 700px;
 }
 
 .pasos img {
