--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ header {
     width: 90%;
     margin: auto;
     margin-top: 1rem;
+    margin-bottom: 1rem;
     padding: 0.5rem;
 
     background-color: #ece0c6;
@@ -36,31 +37,32 @@ header {
 
 /* Imagen de la cabecera */
 header img {
-    width: 90%;   
+    width: 100%;   
     
     box-shadow: 0.1em 0.2em 1em 0.2em black;
     /*display: block;
     margin: auto;*/
     
-    margin: 0.5rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    
-    /*opacity: 0.4;*/
-    /* Difuminamos la imagen */
-    filter: blur(3px) brightness(90%) contrast(76%);
+    opacity: 0.7;
+    border-radius: 2rem;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #392d13;;
     
 }
 
 header img:hover {
-    filter: blur(0px) brightness(100%) contrast(100%);
+    /* Difuminamos la imagen */
+    /*filter: blur(0px) brightness(100%) contrast(100%);*/
+    filter: blur(3px) brightness(90%) contrast(76%);
+    opacity: 1;
 }
 
 /* Bloque que contiene el menú de navegación y el logo */
 .menu-logo{
     width: 90%;
     margin: auto;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 
     display: flex;
     flex-direction: row;
@@ -141,19 +143,44 @@ nav {
 /*----------------*/
 /*----Buscador----*/
 /*----------------*/
-.menu input {
-    height: 2.1em;
-    margin: auto 0.6em;
-    /*padding-left: 0.4em;*/
- }
 
  .menu div {
-    padding-top: 0.4em;
-    padding-bottom: 0.4em;
+    
+ }
+
+ .search-container {
+    position: relative;
+    width: 300px;
+    
     display: flex;
     flex-direction: row;
     align-items: center;
- }
+}
+
+.search-input {
+    margin: auto 0.6em;
+    width: 100%;
+    padding: 10px 15px 10px 40px;
+    border: 1px solid #ccc;
+    border-radius: 25px;
+    font-size: 16px;
+    outline: none;
+    transition: border-color 0.3s ease;
+}
+
+.search-input:focus {
+    border-color: #7F786A;
+    box-shadow: 0 0 5px rgba(127, 120, 106,0.5);
+}
+
+.search-icon {
+    position: absolute;
+    top: 55%;
+    left: 25px;
+    transform: translateY(-50%);
+    font-size: 18px;
+    color: #999;
+}
 
 /*---------------*/
 /*----Submenú----*/
@@ -166,6 +193,7 @@ nav {
 /*Al pasar sobre el botón del menú, aparece el submenú*/
 .menu li:hover ul{
     display: block;
+    z-index: 1; /* Cuando la ventana se hace más pequeña se sobrepone el submenú al buscador*/
 }
 .menu li ul li{
     width: 10em; /*Todos los elementos del submenú tienen el mismo tamaño*/
@@ -184,12 +212,12 @@ nav {
 main {
     width: 90%;
     margin: auto;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     padding: 0.5rem;
 
-    background-color: #f2ead9;
+    /*background-color: #f2ead9;
     border-radius: 2rem;
-    border: solid thin #7F786A;
+    border: solid thin #7F786A;*/
 
     display: flex; /*Se utiliza FLEX para posicionar el contenido del header*/
     flex-direction: column;
@@ -209,14 +237,16 @@ footer {
 
 
 .pasos, .recetas {
-    width: 88%;
+    max-width: 88%;
     margin: auto;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    padding: 0.5rem;
+    padding: 1.5rem;
 
-    background-color: #f9f5ec;
+    /*background-color: #f9f5ec;*/
     border-radius: 2rem;
+    background-color: #f2ead9;
+    border: solid thin #7F786A;
 
     display: flex;
     flex-direction: column;
