--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
     flex-wrap: wrap;
 }
 
@@ -132,54 +133,12 @@ nav {
 .menu ul a{
     /*Hacemos que los elementos ancla de la lista se comporten como botones*/
     display: block;
-    padding: 0.5rem 0.5rem; /*Relleno a la derecha e izquierda de las anclas*/
+    padding: 0.4rem 0.5rem; /*Relleno a la derecha e izquierda de las anclas*/
     line-height: 2.1em; /*Centrar verticalmente el texto*/
     text-decoration: none; /*Desactivar el subrayado*/
     color: #392d13;
     font-weight: bold;
     border-left: #CCCCCC solid thin; /*Añadimos un espacio entre los enlaces de la barra de navegación*/
-}
-
-/*----------------*/
-/*----Buscador----*/
-/*----------------*/
-
- .menu div {
-    
- }
-
- .search-container {
-    position: relative;
-    width: 300px;
-    
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.search-input {
-    margin: auto 0.6em;
-    width: 100%;
-    padding: 10px 15px 10px 40px;
-    border: 1px solid #ccc;
-    border-radius: 25px;
-    font-size: 16px;
-    outline: none;
-    transition: border-color 0.3s ease;
-}
-
-.search-input:focus {
-    border-color: #7F786A;
-    box-shadow: 0 0 5px rgba(127, 120, 106,0.5);
-}
-
-.search-icon {
-    position: absolute;
-    top: 55%;
-    left: 25px;
-    transform: translateY(-50%);
-    font-size: 18px;
-    color: #999;
 }
 
 /*---------------*/
@@ -205,6 +164,42 @@ nav {
     padding-bottom: 0.5rem; /* Reducimos el padding */
     padding-top: 0.5rem;
 }
+
+
+/*----------------*/
+/*----Buscador----*/
+/*----------------*/
+
+.search-container {
+   position: relative;
+   width: 300px;
+}
+
+.search-input {
+   margin: auto 0.6em;
+   width: max-content;
+   padding: 10px 15px 10px 40px;
+   border: 1px solid #ccc;
+   border-radius: 25px;
+   font-size: 16px;
+   outline: none;
+   transition: border-color 0.3s ease;
+}
+
+.search-input:focus {
+   border-color: #7F786A;
+   box-shadow: 0 0 5px rgba(127, 120, 106,0.5);
+}
+
+.search-icon {
+   position: absolute;
+   top: 55%;
+   left: 25px;
+   transform: translateY(-50%);
+   font-size: 18px;
+   color: #999;
+}
+
 
 /*-----------------------------*/
 /*----Contenido princicipal----*/
@@ -291,31 +286,29 @@ p {
 }
 
 
-
-
-
-
-
 /*---------------------*/
 /*----Media Queries----*/
 /*---------------------*/
 
-/* @media (min-width: 80%) */
-/*@media (max-width: 760px) {
-    .contenedor {
-        
+@media only screen and (max-width: 768px) {
+    .menu-logo {
+        justify-content: center;
+    }
+    nav {
+        flex-direction: column;
     }
 
-    .pasos {
-        
-        
-      }
+    .menu ul {
+        margin-bottom: 5px;
+    }
+    .search-input {
+        margin-left: 25px;
+    }
+    .search-icon {
+        left: 40px;
+    }
 
-      header {
-        
-        background-color: red;
-      }
-}*/
+}
 
 
 
