--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Skranji:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /*-----------------------------------------------------*/
 /*----Contenido en común del index y demás páginas ----*/
@@ -47,7 +48,7 @@ header img {
     border-radius: 2rem;
     border-width: 2px;
     border-style: solid;
-    border-color: #392d13;;
+    border-color: #392d13;
     
 }
 
@@ -58,7 +59,10 @@ header img:hover {
     opacity: 1;
 }
 
-/* Bloque que contiene el menú de navegación y el logo */
+/*-------------------------------------------------------------*/
+/*---- Bloque que contiene el menú de navegación y el logo ----*/
+/*-------------------------------------------------------------*/
+
 .menu-logo{
     width: 90%;
     margin: auto;
@@ -66,7 +70,8 @@ header img:hover {
 
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    /*justify-content: space-around;*/
+    justify-content: center;
     flex-wrap: wrap;
 }
 
@@ -86,6 +91,11 @@ h1, .contenedor h2 {
     padding: 0.5rem;
 }
 
+.contenedor h2 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+}
+
 /*Menú Navegación, se accede a las diferentes zonas de contenido*/
 nav {
     width: max-content;
@@ -97,6 +107,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    gap: 10px;
 }
 
 .menu ul {
@@ -172,11 +183,11 @@ nav {
 
 .search-container {
    position: relative;
-   width: 300px;
+   width: max-content;
 }
 
 .search-input {
-   margin: auto 0.6em;
+   margin: auto 0em auto 0.6em;
    width: max-content;
    padding: 10px 15px 10px 40px;
    border: 1px solid #ccc;
@@ -184,6 +195,7 @@ nav {
    font-size: 16px;
    outline: none;
    transition: border-color 0.3s ease;
+   
 }
 
 .search-input:focus {
@@ -301,12 +313,13 @@ p {
     .menu ul {
         margin-bottom: 5px;
     }
+    /*
     .search-input {
         margin-left: 25px;
     }
     .search-icon {
         left: 40px;
-    }
+    }*/
 
 }
 
