--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,10 @@ p {
    
     margin: 0.5rem;
     width: 160px;
+    /*box-shadow: 0px 0px 5px ;*/
+}
+.enlaces div p {
+    margin-top: 10px;
 }
 
 
