--- a/css/style.css
+++ b/css/style.css
@@ -231,22 +231,6 @@ main {
     align-content: center;
 }
 
-main .recetas img {
-    /*box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);*/
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4); /* Sombra */
-}
-
-footer {
-    width: 90%;
-    margin: auto;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    padding: 0.5rem;
-
-}
-
-
-
 .pasos, .recetas {
     max-width: 88%;
     margin: auto;
@@ -278,6 +262,15 @@ p {
     padding-top: 0;
 }
 
+footer {
+    width: 90%;
+    margin: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+
+}
+
 /*-------------------------------------*/
 /*----Contenido Principal del index----*/
 /*-------------------------------------*/
@@ -291,18 +284,26 @@ p {
 }
 
 .enlaces div {
-    border-right: solid thin #7F786A;
-    border-left: solid thin #7F786A;
+    border: solid thin #7f786a;
     text-align: center;
-    padding-top: 0.5rem;
+    /* padding-top: 0.5rem; */
     padding-bottom: 0.5rem;
    
     margin: 0.5rem;
     width: 160px;
-    /*box-shadow: 0px 0px 5px ;*/
+    box-shadow: 2px 2px 4px 4px rgba(127, 120, 106, 0.4);
+    word-wrap: break-word; /* Permite que las palabras largas se rompan si no caben */
+    
 }
 .enlaces div p {
     margin-top: 10px;
+}
+
+main .recetas img {
+    /*box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);*/
+    /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.6); Sombra */
+    width: 160px;
+    height: auto;
 }
 
 
