--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ footer {
     width: 160px;
     box-shadow: 2px 2px 4px 4px rgba(127, 120, 106, 0.4);
     word-wrap: break-word; /* Permite que las palabras largas se rompan si no caben */
-    
+    overflow: hidden; /* Oculta la parte de la imagen que se sale del contenedor */
 }
 .enlaces div p {
     margin-top: 10px;
@@ -304,6 +304,11 @@ main .recetas img {
     /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.6); Sombra */
     width: 160px;
     height: auto;
+    transition: transform 0.3s ease;
+}
+
+main .recetas img:hover {
+    transform: scale(1.2);
 }
 
 
