--- a/css/misRecetas.css
+++ b/css/misRecetas.css
@@ -32,6 +32,60 @@ main {
 }
 
 
+/* Carrusel imágenes */
+.slider {
+    overflow: hidden;
+    width: 65%; 
+    margin: auto;
+    /* position: relative; */
+}
 
+.slider--inner {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    transition: all 0.3s ease-in;
+    /* align-items: center; */
+}
 
+/* .slider--inner img {
+            aspect-ratio: 16 / 9;
+            object-fit: cover;
+        } */
 
+.slider--inner img {
+    width: 100%;
+    min-width: 100%; 
+}
+
+.controls {
+    /* position: absolute; */
+    /* top: 50%; */
+    width: 100%;
+
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+}
+
+.controls button {
+    background-color: #392d13;
+    color: white;
+    border: none;
+    padding: 2% 5%;
+    /* font-size: 18px; */
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.controls button:hover {
+    background-color: #31260f;
+    transform: scale(1.1);
+}
+
+.controls button:active {
+    background-color: #261d0b;
+    transform: scale(0.95);
+}
