--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -37,8 +37,8 @@
     width: 220px;
     /* transform: translateX(100%); */
     transition: transform 0.3s ease;
-    border-radius: 0 0 0 10px;
-    display: none;
+    /* border-radius: 0 0 0 10px; */
+    /* display: none; */
 }
 
 .nav-menu.show {
