--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -38,7 +38,7 @@
     /* transform: translateX(100%); */
     transition: transform 0.3s ease;
     /* border-radius: 0 0 0 10px; */
-    /* display: none; */
+    display: none;
 }
 
 .nav-menu.show {
@@ -62,12 +62,15 @@
     border-bottom: 1px solid #444;
 }
 
+
+/* Pantallas de más de 768px */
 @media(min-width: 768px) {
     .hamburger {
         display: none;
     }
 
     .nav-menu {
+        display: block;
         position: static;
         transform: none;
         background: none;
